web_app/k8s/manifests/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api
  namespace: observability  
spec:
  replicas: 4
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
      - name: node-api
        image: hieuduong2509/my_node_api:latest
        ports:
        - containerPort: 3000
---
# Đảm bảo Service cũng nằm cùng namespace
apiVersion: v1
kind: Service
metadata:
  name: node-api-service
  namespace: observability  
spec:
  selector:
    app: node-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
