web_app/k8s/manifests/loki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:latest
        # Đổi lệnh khởi động để dùng cấu hình mặc định có sẵn trong image
        args: ["-config.file=/etc/loki/local-config.yaml"]
        ports:
        - containerPort: 3100
---
apiVersion: v1
kind: Service
metadata:
  name: loki-service
  namespace: observability
spec:
  selector:
    app: loki
  ports:
    - protocol: TCP
      port: 3100
      targetPort: 3100
