web_app/k8s/manifests/pgpool-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: pgpool-svc
  namespace: default
spec:
  ports:
    - port: 9999
      targetPort: 9999
  selector:
    app: pgpool
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgpool
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgpool
  template:
    metadata:
      labels:
        app: pgpool
    spec:
      containers:
        - name: pgpool
          image: bitnamilegacy/pgpool:4.5.3-debian-12-r0
          ports:
            - containerPort: 9999
