web_app/k8s/manifests/postgres-statefulset.yml
# 1. PRIMARY NODE (StatefulSet & Service)
apiVersion: v1
kind: Service
metadata:
  name: postgres-primary
  namespace: default
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres-primary
  clusterIP: None 
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-primary
  namespace: default
spec:
  serviceName: "postgres-primary"
  replicas: 5
  selector:
    matchLabels:
      app: postgres-primary
  template:
    metadata:
      labels:
        app: postgres-primary
    spec:
      containers:
        - name: postgres
          image: bitnamilegacy/postgresql:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pg-primary-data
              mountPath: /bitnami/postgresql
  volumeClaimTemplates:
    - metadata:
        name: pg-primary-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi

---
# 2. REPLICA NODE (StatefulSet & Service)
apiVersion: v1
kind: Service
metadata:
  name: postgres-replica
  namespace: default
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres-replica
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-replica
  namespace: default
spec:
  serviceName: "postgres-replica"
  replicas: 5
  selector:
    matchLabels:
      app: postgres-replica
  template:
    metadata:
      labels:
        app: postgres-replica
    spec:
      containers:
        - name: postgres
          image: bitnamilegacy/postgresql:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pg-replica-data
              mountPath: /bitnami/postgresql
  volumeClaimTemplates:
    - metadata:
        name: pg-replica-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi
