web_app/k8s/manifests/tempo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      labels:
        app: tempo
    spec:
      containers:
      - name: tempo
        image: grafana/tempo:latest
        args: ["-config.file=/etc/tempo.yaml"]
        # ===> THÊM SECURITY CONTEXT NÀY ĐỂ TRÁNH LỖI PERMISSION <===
        securityContext:
          runAsUser: 0
          privileged: true
        # ==========================================================
        ports:
        - name: http-query
          containerPort: 3200
        - name: otlp-grpc
          containerPort: 4317
        - name: otlp-http       # -> BỔ SUNG PORT 4318
          containerPort: 4318
        volumeMounts:
        - name: tempo-config
          mountPath: /etc/tempo.yaml
          subPath: tempo.yaml
      volumes:
      - name: tempo-config
        configMap:
          name: tempo-config
---
apiVersion: v1
kind: Service
metadata:
  name: tempo-service
  namespace: observability
spec:
  selector:
    app: tempo
  ports:
    - name: http-query
      port: 3200
      targetPort: 3200
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http     
      port: 4318
      targetPort: 4318
