web_app/k8s/manifests/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: all-ingress
  namespace: observability
spec:
  ingressClassName: traefik
  rules:
  - host: api.devoops.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-api-service
            port:
              number: 80
  - host: grafana.devoops.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-grafana
            port:
              number: 80
