web_app/k8s/manifests/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    # Quan trọng: Ép kiểu kết nối cho gRPC của ArgoCD
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
spec:
  ingressClassName: traefik
  rules:
  - host: argocd.devoops.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
